[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
alloy = { version = "0.14.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }